[package]
name = "logalert"
version = "0.0.7"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
handlebars = "^6.0"
json_env_logger2 = "^0.2"
libc = "^0.2"
log = "^0.4"
regex = "^1.10"
reqwest = "^0.12"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
tokio = { version = "^1", features = ["full"] }

[dependencies.uuid]
version = "^1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
