[package]
name = "logalert"
version = "0.0.10"
edition = "2021"
rust-version = "1.91"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
handlebars = "6.2"
json_env_logger2 = "0.2"
libc = "0.2"
log = "0.4"
regex = "1.11"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
url = "2.5"

[dependencies.uuid]
version = "1.11"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
